After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 589157 - Archive Mounter fails to hide hidden files OkCancel
Archive Mounter fails to hide hidden files OkCancel
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: archive backend
1.3.x
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2009-07-20 18:12 UTC by Pedro Villavicencio
Modified: 2013-11-07 14:39 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28


Attachments
archive: Set the is_hidden attribute when appropriate (966 bytes, patch)
2013-11-04 11:49 UTC, Ross Lagerwall
accepted-commit_now Details | Review

Description Pedro Villavicencio 2009-07-20 18:12:22 UTC
this report has been filed here:

https://bugs.edge.launchpad.net/ubuntu/+source/file-roller/+bug/384178

"
I archived my home directory as a .tar.gz file (also using nautilus) and opened it with Archive Mounter. When I browse the mounted archive, I expected to be able to hide hidden dot files and directories by toggling the Show Hidden Files menu item.

The dot files (e.g. .aptitude, .cache, .config) show up regardless of whether Show Hidden Files is checked.

I've tried it using the home directories of two different users with the same result. Thanks for reading this bug report."

Thanks,
Comment 1 Tomas Bzatek 2009-10-14 16:24:29 UTC
If it's really an "Archive Mounter" and you browse it using Nautilus, it's actually gvfs providing you the data.
Comment 2 Ross Lagerwall 2013-11-04 11:49:48 UTC
Created attachment 258915 [details] [review]
archive: Set the is_hidden attribute when appropriate
Comment 3 Ondrej Holy 2013-11-07 13:56:45 UTC
Review of attachment 258915 [details] [review]:

It looks good.
Comment 4 Ondrej Holy 2013-11-07 13:56:47 UTC
Review of attachment 258915 [details] [review]:

It looks good.
Comment 5 Ross Lagerwall 2013-11-07 14:39:06 UTC
Pushed to master as 33a9f21d96b8903188614509a405e62b858035a3. Thanks!