archive: Set the is_hidden attribute when appropriate

https://bugzilla.gnome.org/show_bug.cgi?id=589157